compile_fail_tests/map/break_in_body_unevaluated.rs
use const_tools::map;

const fn test<const N: usize>(input: [usize; N]) -> [usize; N] {
    map!(input, |_| {
        break;
    })
}

fn main() {}
